# minimalTorchRocm

./: flake.nix  pyproject.toml
