[tool.poetry]
name = "torchtest"
version = "0.0.0"
description = "A minimal attempt at recrating why I can't import torch with ROCM"
authors = ["volkswagenfeature"]
packages = [ ]

[tool.poetry.dependencies]
python = "3.12.*"
#dummy_test = "*"
torch = { url = "https://download.pytorch.org/whl/nightly/rocm6.1/torch-2.5.0.dev20240812%2Brocm6.1-cp312-cp312-linux_x86_64.whl" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/rocm6.1"
priority = "explicit"



[tool.poetry.dev-dependencies]
# build systems for dependencies
hatchling = "*"

[build-system]
requires = ["poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
